--- a/rets-client/.classpath
+++ b/rets-client/.classpath
@@ -4,12 +4,12 @@
 	<classpathentry kind="src" path="dev/src/junit"/>
 	<classpathentry kind="src" path="dev/src/conf"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="dev/lib/commons-codec-1.2.jar" sourcepath="docs/lib/commons-codec-1.2-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="dev/lib/commons-httpclient-3.0.jar" sourcepath="docs/lib/commons-httpclient-3.0-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="dev/lib/commons-lang-2.2.jar" sourcepath="docs/lib/commons-lang-2.2-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="dev/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="dev/lib/jdom-b10.jar" sourcepath="docs/lib/jdom-b10-src.zip"/>
-	<classpathentry kind="lib" path="dev/lib/ext/junit-4.1.jar" sourcepath="docs/lib/junit-4.1-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="dev/lib/log4j-1.2.8.jar"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/commons-codec-1.3.jar"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/commons-httpclient-3.0.1.jar" sourcepath="docs/lib/commons-httpclient-3.0.1-src.zip"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/commons-lang-2.2.jar" sourcepath="docs/lib/commons-lang-2.2-src.zip"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/commons-logging-1.1.1.jar" sourcepath="docs/lib/commons-logging-1.1.1-sources.jar"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/jdom-b10.jar" sourcepath="docs/lib/jdom-b10-src.zip"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/ext/junit-4.1.jar" sourcepath="docs/lib/junit-4.1-src.zip"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/log4j-1.2.8.jar"/>
 	<classpathentry kind="output" path="dist/rets-client-sandbox/classes"/>
 </classpath>
