--- a/rets-client/.classpath
+++ b/rets-client/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="false" kind="lib" path="dev/lib/commons-codec-1.3.jar"/>
 	<classpathentry exported="false" kind="lib" path="dev/lib/commons-httpclient-3.1.jar" sourcepath="docs/lib/commons-httpclient-3.1-src.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/commons-lang-2.2.jar" sourcepath="docs/lib/commons-lang-2.2-src.zip"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/commons-lang-2.4.jar" sourcepath="docs/lib/commons-lang-2.4-sources.zip"/>
 	<classpathentry exported="false" kind="lib" path="dev/lib/commons-logging-1.1.1.jar" sourcepath="docs/lib/commons-logging-1.1.1-sources.jar"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/jdom-b10.jar" sourcepath="docs/lib/jdom-b10-src.zip"/>
+	<classpathentry exported="false" kind="lib" path="dev/lib/jdom-1.1.jar" sourcepath="docs/lib/jdom-1.1-sources.zip"/>
 	<classpathentry exported="false" kind="lib" path="dev/lib/ext/junit-4.1.jar" sourcepath="docs/lib/junit-4.1-src.zip"/>
 	<classpathentry exported="false" kind="lib" path="dev/lib/log4j-1.2.8.jar"/>
 	<classpathentry kind="output" path="dist/rets-client-sandbox/classes"/>
