--- a/rets-client/.classpath
+++ b/rets-client/.classpath
@@ -5,19 +5,19 @@
 	<classpathentry kind="src" path="dev/src/junit"/>
 	<classpathentry kind="src" path="dev/src/conf"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/commons-beanutils-1.7.0.jar" sourcepath="docs/lib/commons-beanutils-1.7.0-sources.jar"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/commons-codec-1.3.jar"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/commons-httpclient-3.1.jar" sourcepath="docs/lib/commons-httpclient-3.1-src.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/commons-lang-2.4.jar" sourcepath="docs/lib/commons-lang-2.4-sources.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/commons-logging-1.1.1.jar" sourcepath="docs/lib/commons-logging-1.1.1-sources.jar"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/commons-pool-1.4.jar" sourcepath="docs/lib/commons-pool-1.4-sources.jar"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/guava-r08.jar" sourcepath="docs/lib/guava-src-r08.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/jakarta-poi-2.5.1.jar" sourcepath="docs/lib/jakarta-poi-2.5.1-src.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/jdom-1.1.jar" sourcepath="docs/lib/jdom-1.1-sources.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/joda-time-1.6.jar" sourcepath="docs/lib/joda-time-1.6-sources.jar"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/ext/junit-4.1.jar" sourcepath="docs/lib/junit-4.1-src.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/log4j-1.2.8.jar"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/swingx-1.0.jar" sourcepath="docs/lib/swingx-1.0-src.zip"/>
-	<classpathentry exported="false" kind="lib" path="dev/lib/swingx-beaninfo-1.0.jar" sourcepath="docs/lib/swingx-1.0-src.zip"/>
+	<classpathentry kind="lib" path="dev/lib/commons-beanutils-1.7.0.jar" sourcepath="docs/lib/commons-beanutils-1.7.0-sources.jar"/>
+	<classpathentry kind="lib" path="dev/lib/commons-codec-1.5.jar"/>
+	<classpathentry kind="lib" path="dev/lib/commons-httpclient-3.1.jar" sourcepath="docs/lib/commons-httpclient-3.1-src.zip"/>
+	<classpathentry kind="lib" path="dev/lib/commons-lang-2.6.jar" sourcepath="docs/lib/commons-lang-2.6-sources.zip"/>
+	<classpathentry kind="lib" path="dev/lib/commons-logging-1.1.1.jar" sourcepath="docs/lib/commons-logging-1.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="dev/lib/commons-pool-1.4.jar" sourcepath="docs/lib/commons-pool-1.4-sources.jar"/>
+	<classpathentry kind="lib" path="dev/lib/guava-10.0.1.jar" sourcepath="docs/lib/guava-10.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="dev/lib/jdom-1.1.jar" sourcepath="docs/lib/jdom-1.1-sources.zip"/>
+	<classpathentry kind="lib" path="dev/lib/joda-time-2.0.jar" sourcepath="docs/lib/joda-time-2.0-sources.jar"/>
+	<classpathentry kind="lib" path="dev/lib/ext/junit-4.1.jar" sourcepath="docs/lib/junit-4.1-src.zip"/>
+	<classpathentry kind="lib" path="dev/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="dev/lib/poi-3.7-20101029.jar"/>
+	<classpathentry kind="lib" path="dev/lib/swingx-1.0.jar" sourcepath="docs/lib/swingx-1.0-src.zip"/>
+	<classpathentry kind="lib" path="dev/lib/swingx-beaninfo-1.0.jar" sourcepath="docs/lib/swingx-1.0-src.zip"/>
 	<classpathentry kind="output" path="dist/rets-client-sandbox/classes"/>
 </classpath>
