new build artifact naming scheme

--- a/rets-client/dev/build.xml
+++ b/rets-client/dev/build.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
 <project name="rets-client" default="refresh" basedir=".">
-    <!--**********************************************************************
+
+	<!--**********************************************************************
+                            SOME MACRO DEFINTIONS
+    ***********************************************************************-->
+	<import file="templates.xml"/>
+
+	<!--**********************************************************************
                             PROPERTIES FILE DEFINTION
     ***********************************************************************-->
 	<property name="build.environment" value="default"/>
@@ -16,18 +22,21 @@
 	<property name="dist.lib" 			value="${dist.sandbox}/lib"/>
 	<!-- junit property stuff -->
 	<property name="dist.classes" 		value="${dist.sandbox}/classes"/>
-    <property name="dist.javadoc"    	value="${dist}/javadoc"/>
+	<property name="dist.javadoc"    	value="${dist}/javadoc"/>
 	<property name="dist.junit"	 		value="${dist}/junit"/>
 	<property name="dist.junit.xml" 	value="${dist.junit}/xml"/>
+
+	<!-- git version info -->
+	<property prefix="git" file="../../.git/HEAD"/>
+	<basename file="${git.ref}" suffix="true" property="git.branch"/>
+	<loadfile srcfile="../../.git/refs/heads/${git.ref}" property="git.version"/>
+	<substring text="${git.version}" start="0" end="7" property="git.version.abbrev" />
+
+	<!-- dist file version stamp -->
 	<tstamp>
-		<format property="dist.version" pattern="yyyy-MM-dd_HH-mm-ss" locale="en"/>
+		<format property="dist.version.date" pattern="yyyyMMdd-HHmm" locale="en"/>
 	</tstamp>
 
-
-	<!--**********************************************************************
-                            SOME MACRO DEFINTIONS
-    ***********************************************************************-->
-	<import file="templates.xml"/>
 
 	<!--**********************************************************************
                           BASE TASKS FOR PROJECT REFRESH
@@ -36,12 +45,13 @@
 	<fail unless="dist"/>
 	<fail unless="dist.classes"/>
 	<fail unless="dist.lib" />
-	
+
+
 	<filterset id="filters">
-		<filtersfile file="default.properties"/>
-		<filtersfile file="${build.environment}.properties"/>
+		<filtersfile file="default.properties" />
+		<filtersfile file="${build.environment}.properties" />
 	</filterset>
-	
+
 	<target name="clean" description="Removes the output directory">
 		<delete dir="${dist}"/>
 	</target>
@@ -59,13 +69,13 @@
 	</target>
 
 	<target name="dist" depends="clean,deps">
-		<import-project-library library="${ant.project.name}" lib="${dist.lib}" classes="${dist.classes}" suffix="-${dist.version}"/>
+		<import-project-library library="${ant.project.name}" lib="${dist.lib}" classes="${dist.classes}" suffix=".${dist.version.date}.${git.version.abbrev}"/>
 	</target>
-	
+
 	<!--**********************************************************************
                           BASE TASKS FOR PROJECT TESTING
     ***********************************************************************-->
-    <fail unless="dist.javadoc"/>
+	<fail unless="dist.javadoc"/>
 	<fail unless="dist.junit"/>
 	<fail unless="dist.junit.xml"/>
 
@@ -76,7 +86,7 @@
 			<fileset dir="src/junit" includes="**/*.properties,**/*.xml"/>
 		</copy>
 	</target>
-	
+
 	<target name="unit-test" depends="unit-test-init" description="Run Tests">
 		<unit-test classes="${dist.classes}" lib="${dist.lib}" reportdir="${dist.junit}" xmldir="${dist.junit.xml}"
 			testpattern="*Test.java" suitepattern="*TestSuite.java" />
@@ -86,8 +96,8 @@
 		<unit-test classes="${dist.classes}" lib="${dist.lib}" reportdir="${dist.junit}" xmldir="${dist.junit.xml}"
 			testpattern="*TestExt.java" suitepattern="*TestSuiteExt.java" />
 	</target>
-	
+
 	<target name="build-and-test" depends="refresh,unit-test" />
 
-	
+
 </project>
