--- a/rets-client/dev/pom.xml
+++ b/rets-client/dev/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.realtors.rets</groupId>
   <artifactId>jrets</artifactId>
-  <version>1.7.0-SNAPSHOT</version>
+  <version>1.7.0</version>
   <packaging>jar</packaging>
 
   <name>jrets</name>
@@ -57,7 +56,7 @@
     <scm>
         <connection>scm:git:ssh://git@github.com/DietSodaSoft/jrets.git</connection>
         <url>https://github.com/DietSodaSoft/jrets</url>
-        <tag>HEAD</tag>
+        <tag>v1.7.0</tag>
     </scm>
 
 </project>
